--- a/compose.yaml
+++ b/compose.yaml
@@ -16,20 +16,20 @@ services:
     networks:
       - api
 
-  # lazydocker:
-  #   build:
-  #     context: https://github.com/jesseduffield/lazydocker.git
-  #     args:
-  #       BASE_IMAGE_BUILDER: golang
-  #       GOARCH: arm64
-  #       GOARM:
-  #   image: lazyteam/lazydocker
-  #   container_name: lazydocker
-  #   stdin_open: true
-  #   tty: true
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #     - ./config:/.config/jesseduffield/lazydocker
+  lazydocker:
+    build:
+      context: https://github.com/jesseduffield/lazydocker.git
+      args:
+        BASE_IMAGE_BUILDER: golang
+        GOARCH: arm64
+        GOARM:
+    image: lazyteam/lazydocker
+    container_name: lazydocker
+    stdin_open: true
+    tty: true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./config:/.config/jesseduffield/lazydocker
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -59,7 +59,7 @@ services:
       #KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLED: "true"
       KAFKA_CREATE_TOPICS: "message_system.test:1:1"
-      
+
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     depends_on:
