--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     mem_limit: 300m
     networks:
       - api
-  consumer:
+  event-driven-consumer:
     container_name: ${APP_NAME}-consumer
     image: golang:1.25-alpine3.22
     working_dir: /app
@@ -29,7 +29,20 @@ services:
     mem_limit: 300m
     networks:
       - api
-
+  message-publisher:
+    container_name: ${APP_NAME}-publisher
+    image: golang:1.25-alpine3.22
+    working_dir: /app
+    volumes:
+      - ./:/app
+    env_file:
+      - .env
+    command: go run cmd/message_publisher/main.go
+    ports:
+      - "6061:6061"
+    mem_limit: 300m
+    networks:
+      - api
   lazydocker:
     build:
       context: https://github.com/jesseduffield/lazydocker.git
