refactor: adicionado pyroscope e ajustes gerais

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 APP_NAME='hex-api-go'
-APP_PORT=3000
+APP_PORT=4000
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+OTEL_SERVICE_NAME=hex-api-go
